# DeathStarBench

./: .gitignore  BUILD_INSTRUCTIONS.md  CADDY_EVALUATION.md  CADDY_EVALUATION_CN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  OPENTELEMETRY_MIGRATION.md  OPENTELEMETRY_MIGRATION_CN.md  OTEL_MIGRATION.md  README.md  SUMMARY.md  SUMMARY_CN.md  build-docker.sh
docs/caddy-comparison/: README.md  caddy-hypothetical.caddyfile  caddy-with-gateway.md  openresty-current.conf
hotelReservation/: Dockerfile  OTEL_LOG_INTEGRATION.md  README.md  go.mod  go.sum
hotelReservation/cmd/attractions/: db.go  main.go
hotelReservation/cmd/frontend/: main.go
hotelReservation/cmd/geo/: db.go  main.go
hotelReservation/cmd/profile/: db.go  main.go
hotelReservation/cmd/rate/: db.go  main.go
hotelReservation/cmd/recommendation/: db.go  main.go
hotelReservation/cmd/reservation/: db.go  main.go
hotelReservation/cmd/review/: db.go  main.go
hotelReservation/cmd/search/: main.go
hotelReservation/cmd/user/: db.go  main.go
hotelReservation/dialer/: dialer.go
hotelReservation/helm-chart/hotelreservation/: Chart.yaml  values.yaml
hotelReservation/kubernetes/attractions/: attractions-deployment.yaml  attractions-persistent-volume.yaml  attractions-pvc.yaml  attractions-service.yaml  mongodb-attractions-deployment.yaml  mongodb-attractions-service.yaml
hotelReservation/registry/: registry.go
hotelReservation/services/attractions/: README.md  server.go
hotelReservation/services/frontend/: server.go
hotelReservation/services/geo/: server.go
hotelReservation/services/profile/: server.go
hotelReservation/services/rate/: server.go
hotelReservation/services/recommendation/: server.go
hotelReservation/services/reservation/: server.go
hotelReservation/services/review/: server.go
hotelReservation/services/search/: server.go
hotelReservation/services/user/: server.go
hotelReservation/tls/: options.go
hotelReservation/tracing/: logger.go  mux.go  otellogger.go  tracer.go
hotelReservation/tune/: setting.go
mediaMicroservices/: Dockerfile  FIX_CJSON_NULL.md  FIX_CJSON_NULL_CN.md  README.md  docker-compose-sharding.yml  docker-compose.yml
mediaMicroservices/helm-chart/mediamicroservices/: CHANGES.md  Chart.yaml  README.md  README_CN.md  SOLUTION_CN.md  TESTING.md  values.yaml
mediaMicroservices/nginx-web-server/: Dockerfile  README.md
mediaMicroservices/nginx-web-server/conf/: nginx.conf
mediaMicroservices/nginx-web-server/lua-scripts/: opentracing_bridge_tracer.lua  test.lua
mediaMicroservices/openshift/: cast-info-service.yaml  compose-review-service.yaml  movie-id-service.yaml  movie-info-service.yaml  movie-review-service.yaml  nginx-web-server.yaml  plot-service.yaml  rating-service.yaml  review-storage-service.yaml  text-service.yaml  unique-id-service.yaml  user-review-service.yaml  user-service.yaml
mediaMicroservices/openshift/configmaps/: nginx.conf
mediaMicroservices/scripts/: write_movie_info.py
mediaMicroservices/src/: CMakeLists.txt  tracing.h
mediaMicroservices/src/CastInfoService/: CMakeLists.txt  CastInfoHandler.h  CastInfoService.cpp
mediaMicroservices/src/ComposeReviewService/: CMakeLists.txt  ComposeReviewHandler.h  ComposeReviewService.cpp
mediaMicroservices/src/MovieIdService/: CMakeLists.txt  MovieIdHandler.h  MovieIdService.cpp
mediaMicroservices/src/MovieInfoService/: CMakeLists.txt  MovieInfoHandler.h  MovieInfoService.cpp
mediaMicroservices/src/MovieReviewService/: CMakeLists.txt  MovieReviewHandler.h  MovieReviewService.cpp
mediaMicroservices/src/PageService/: CMakeLists.txt  PageHandler.h  PageService.cpp
mediaMicroservices/src/PlotService/: CMakeLists.txt  PlotHandler.h  PlotService.cpp
mediaMicroservices/src/RatingService/: CMakeLists.txt  RatingHandler.h  RatingService.cpp
mediaMicroservices/src/ReviewStorageService/: CMakeLists.txt  ReviewStorageHandler.h  ReviewStorageService.cpp
mediaMicroservices/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
mediaMicroservices/src/UniqueIdService/: CMakeLists.txt  UniqueIdHandler.h  UniqueIdService.cpp
mediaMicroservices/src/UserReviewService/: CMakeLists.txt  UserReviewHandler.h  UserReviewService.cpp
mediaMicroservices/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
socialNetwork/: .dockerignore  Dockerfile  FIX_CJSON_NULL.md  FIX_CJSON_NULL_CN.md  docker-compose-sharding.yml  docker-compose-swarm.yml  docker-compose-tls.yml  docker-compose.yml
socialNetwork/config/: jaeger-config.yml  otel-collector-config.yaml  otel-config.yml
socialNetwork/helm-chart/: README.md
socialNetwork/helm-chart/socialnetwork/: Chart.yaml  values.yaml
socialNetwork/media-frontend/: Dockerfile
socialNetwork/media-frontend/conf/: nginx.conf
socialNetwork/nginx-web-server/: Dockerfile  README.md
socialNetwork/nginx-web-server/conf/: nginx.conf
socialNetwork/openshift/: media-frontend.yaml  nginx-thrift.yaml
socialNetwork/openshift/nginx-thrift-config/: nginx.conf
socialNetwork/scripts/: init_social_graph.py  pyproject.toml
socialNetwork/src/: CMakeLists.txt  tracing.h
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineHandler.h  HomeTimelineService.cpp
socialNetwork/src/MediaService/: CMakeLists.txt  MediaHandler.h  MediaService.cpp
socialNetwork/src/PostStorageService/: CMakeLists.txt  PostStorageHandler.h  PostStorageService.cpp
socialNetwork/src/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
socialNetwork/src/UniqueIdService/: CMakeLists.txt  UniqueIdHandler.h  UniqueIdService.cpp
socialNetwork/src/UrlShortenService/: CMakeLists.txt  UrlShortenHandler.h  UrlShortenService.cpp
socialNetwork/src/UserMentionService/: CMakeLists.txt  UserMentionHandler.h  UserMentionService.cpp
socialNetwork/src/WriteHomeTimelineService/: CMakeLists.txt  WriteHomeTimelineService.cpp
(+113 files in other folders)
